[package]
name = "mc_http_relay"
version = "0.1.0"
edition = "2021"
authors = ["occanowey"]
description = "Relay Minecraft status and login requests to a http server."

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }

# Error Handling
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }

# Minecraft related
hostname-validator = "1.1.1"

# Http related
reqwest = { version = "0.12.3", features = ["blocking"] }
