[package]
name = "mc_http_relay"
version = "0.1.0"
edition = "2021"
authors = ["occanowey"]
description = "Relay Minecraft status and login requests to a http server."

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
hostname-validator = "1.1.1"

# Error Handling
color-eyre = "0.6"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }

# Minecraft related
mcproto = { git = "https://github.com/occanowey/mcproto", version = "0.1.0" }
uuid = { version = "1.8.0", features = ["serde"] }

rsa = "0.9.6"
der = "0.7.9"
rand = "0.8"
sha-1 = "0.10.0"
num-bigint = "0.4"

# Http related
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
